# territorymmo

./: .gitignore
server/: CMakeLists.txt  arhitecture.txt
server/src/: main.cpp
server/src/clientinteraction/: game_client.cpp  game_client.h  game_client_factory.cpp  game_client_factory.h  game_notifier.cpp  game_notifier.h  game_notifier_factory.cpp  game_notifier_factory.h
server/src/game/: entity.h  game.cpp  game.h  notifier.h  player.cpp  player.h  player_set_interface.h  tile.h  tile_map.cpp  tile_map.h  tile_map_interface.h
server/src/game/entity/: entity.cpp  entity.h  unit.cpp  unit.h
server/src/game/map/: tile.cpp  tile.h  tile_data.h  tile_map.cpp  tile_map.h  tile_map_interface.h
server/src/game/notifier/: notifier.h  notifier_factory.h
server/src/game/player/: player.cpp  player.h  player_set.cpp  player_set.h  player_set_interface.h
server/src/networking/: client.h  client_factory.h  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h
server/test/: test.cpp
